--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-config-fullstack": "^6.0.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "mocha": "^6.1.4",
